--- a/M-saolei.css
+++ b/M-saolei.css
@@ -1,17 +1,4 @@
 #warning{color:#ff0000;}
-#main{background:#ddd;border:1px solid #888;}
-#main div{border:1px solid #888;font-weight:bold;height:19px;line-height:18px;text-align:center;width:19px;}
-.hidden{background:url(blank.bmp) }
-.flag{background:url(flag.bmp) }
-.check{background:url(ask.bmp) }
-.bomb{background:url(mine.bmp) }
-.cbomb{background:url(blood.bmp) }
-.wrong{background:url(error.bmp) }
-.num1{color:#0000ff;}
-.num2{color:#008000;}
-.num3{color:#ff0000;}
-.num4{color:#000080;}
-.num5{color:#800000;}
-.num6{color:#008080;}
-.num7{color:#000000;}
-.num8{color:#808080;}
+#main{background:#ddd;position:relative;}
+#main div{border:1px solid #888;font-weight:bold;height:19px;line-height:18px;position:absolute;text-align:center;width:19px;}
+.hidden{background:url(blank.bmp) -1px -1px;}
