--- a/M-saolei.css
+++ b/M-saolei.css
@@ -4,3 +4,14 @@
 .hidden{background:url(blank.bmp) -1px -1px;}
 .flag{background:url(flag.bmp) -1px -1px;}
 .check{background:url(ask.bmp) -1px -1px;}
+.bomb{background:url(mine.bmp) -3px -3px;}
+.cbomb{background:url(blood.bmp) -3px -3px;}
+.wrong{background:url(error.bmp) -3px -3px;}
+.num1{color:#0000ff;}
+.num2{color:#008000;}
+.num3{color:#ff0000;}
+.num4{color:#000080;}
+.num5{color:#800000;}
+.num6{color:#008080;}
+.num7{color:#000000;}
+.num8{color:#808080;}
