--- a/M-saolei.css
+++ b/M-saolei.css
@@ -1,6 +1,6 @@
 #warning{color:#ff0000;}
 #main{background:#ddd;position:relative;}
-#main div{border:1px solid #888;font-weight:bold;height:19px;line-height:18px;position:absolute;text-align:center;width:19px;}
+#main div{border:1px solid #888;text-align:center;font-weight:bold;width:19px;height:19px;line-height:18px;position:absolute;cursor:default;}
 .hidden{background:url(blank.bmp) -1px -1px;}
 .flag{background:url(flag.bmp) -1px -1px;}
 .check{background:url(ask.bmp) -1px -1px;}
