--- a/M-saolei.css
+++ b/M-saolei.css
@@ -5,7 +5,7 @@
 .flag{background:url(flag.bmp) -1px -1px;}
 .check{background:url(ask.bmp) -1px -1px;}
 .bomb{background:url(mine.bmp) -3px -3px;}
-.cbomb{background:url(blood.bmp) -3px -3px;}
+.blood{background:url(blood.bmp) -3px -3px;}
 .wrong{background:url(error.bmp) -3px -3px;}
 .num1{color:#0000ff;}
 .num2{color:#008000;}
